@@ -1,3 +1,8 @@
+2000-06-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* inet_aton.c (inet_aton): new function.
+	* configure.in: AC_REPLACE_FUNCS inet_aton.
+
 2000-06-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* sockets.c (sopen): use inet_aton to convert dotted quad
